--- a/src/View/MainMenu.fxml
+++ b/src/View/MainMenu.fxml
@@ -13,11 +13,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="715.0" prefWidth="889.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MainMenuController">
    <children>
-      <ImageView fitHeight="715.0" fitWidth="896.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/Vector2.png" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="bg" fitHeight="715.0" fitWidth="1134.0" layoutX="-3.0" layoutY="-3.0" opacity="0.5" pickOnBounds="true" smooth="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-245.0" AnchorPane.topAnchor="0.0" />
+      <ImageView fx:id="vector" fitHeight="612.0" fitWidth="752.0" layoutX="81.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true" />
       <HBox alignment="CENTER" layoutX="174.0" layoutY="256.0" prefHeight="170.0" prefWidth="526.0" stylesheets="@application.css">
          <children>
             <Button fx:id="startBt" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#startGame" prefHeight="123.0" prefWidth="138.0" text="Start Game" textAlignment="CENTER" wrapText="true">
@@ -43,7 +40,7 @@
             </Button>
          </children>
       </HBox>
-      <Pane fx:id="helpPane" layoutX="176.0" layoutY="149.0" opacity="0.95" prefHeight="375.0" prefWidth="569.0" style="-fx-background-color: #2e7d32; -fx-background-radius: 70px; -fx-border-color: #000000; -fx-border-radius: 70px; -fx-border-style: dashed;">
+      <Pane fx:id="helpPane" layoutX="174.0" layoutY="209.0" opacity="0.95" prefHeight="375.0" prefWidth="569.0" style="-fx-background-color: #2e7d32; -fx-background-radius: 70px; -fx-border-color: #000000; -fx-border-radius: 70px; -fx-border-style: dashed;">
          <children>
             <Text layoutX="175.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Game Instructions">
                <font>
@@ -88,18 +85,18 @@
                </font>
             </Text>
                
-         </children>
+                     </children>
       </Pane>
       <Button fx:id="logoutBt" layoutX="32.0" layoutY="20.0" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: transparent;">
          <graphic>
             <ImageView fitHeight="31.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" styleClass="-fx-background-color: white;">
                <image>
-                  <Image url="@../images/logOut.png" />
+                  <Image url="@../images/log-out.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <ComboBox fx:id="theme" layoutX="597.0" layoutY="22.0" prefHeight="34.0" prefWidth="171.0" promptText="select theme" styleClass="Feild" stylesheets="@application.css" />
+      <ComboBox fx:id="theme" layoutX="597.0" layoutY="22.0" onAction="#vectorTheme" prefHeight="34.0" prefWidth="171.0" promptText="select theme" styleClass="Feild" stylesheets="@application.css" />
       <Button fx:id="ask" layoutX="817.0" layoutY="21.0" mnemonicParsing="false" onAction="#onText" style="-fx-background-color: transparent;">
          <graphic>
             <ImageView fx:id="askImg" fitHeight="38.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
