--- a/src/View/ChessBoard.fxml
+++ b/src/View/ChessBoard.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="allBoard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BoardController">
+<BorderPane fx:id="allBoard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BoardController">
 	<top>
 		<HBox nodeOrientation="LEFT_TO_RIGHT" prefHeight="137.0" prefWidth="850.0" BorderPane.alignment="CENTER">
 			<BorderPane.margin>
@@ -91,7 +91,7 @@
                                     <Image url="@../images/score%20(2).png" />
                                  </image>
                                  <GridPane.margin>
-                                    <Insets left="30.0" top="2.0" />
+                                    <Insets left="30.0" top="45.0" />
                                  </GridPane.margin>
                               </ImageView>
                               <Text fx:id="score" strokeType="OUTSIDE" strokeWidth="0.0" text="Score" wrappingWidth="314.21643447875977" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -99,7 +99,7 @@
                                     <Font name="System Bold" size="20.0" />
                                  </font>
                                  <GridPane.margin>
-                                    <Insets left="10.0" top="2.0" />
+                                    <Insets left="10.0" />
                                  </GridPane.margin>
                               </Text>
                               <Text fx:id="playerName" strokeType="OUTSIDE" strokeWidth="0.0" text="PlayerName:" GridPane.columnIndex="3">
