Restart button + try again fix

--- a/src/View/ChessBoard.fxml
+++ b/src/View/ChessBoard.fxml
@@ -38,10 +38,35 @@
                               <Insets right="150.0" />
                            </HBox.margin>
                         </Button>
+                        <HBox prefHeight="46.0" prefWidth="51.0">
+                           <children>
+                              <Button fx:id="restart" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="46.0" prefWidth="48.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;">
+                                 <font>
+                                    <Font name="Times New Roman Bold" size="19.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                                 <graphic>
+                                    <ImageView fitHeight="39.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../images/restart.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="-130.0" />
+                           </HBox.margin>
+                        </HBox>
                         <Button fx:id="first" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="46.0" prefWidth="116.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="1">
                            <font>
                               <Font name="Times New Roman Bold" size="19.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets left="50.0" />
+                           </HBox.margin>
                         </Button>
                         <Button fx:id="second" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="46.0" prefWidth="116.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="2">
                            <font>
